[package]
name = "async-ssh2"
version = "0.2.0"
authors = ["spebern sp33cht@googlemail.com"]
license = "MIT/Apache-2.0"
keywords = ["ssh", "async"]
readme = "README.md"
repository = "https://github.com/spebern/async-ssh2"
homepage = "https://github.com/spebern/async-ssh2"
documentation = "https://docs.rs/async-ssh2"
description = """Async wrapper over ssh2."""
edition = "2018"

[features]
vendored-openssl = ["ssh2/vendored-openssl"]

[dependencies]
ssh2 = "0.9"
libssh2-sys = "0.2"
async-io = "^1.3"
futures = "0.3.8"
futures-util = "0.3.8"

[dev-dependencies]
tempfile = "3.1"
tokio = { version = "0.2", features = ["io-driver", "io-util", "macros", "rt-core"] }
